# LibMTL

./: pyproject.toml
LibMTL/: _record.py  config.py  metrics.py  trainer.py
LibMTL/architecture/: Cross_stitch.py  abstract_arch.py
